--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -2,16 +2,24 @@
 # directory name when running `supabase init`.
 project_id = "nextbase-ultimate-supabase-playwright"
 
+# [api]
+# enabled = true
+# # Port to use for the API URL.
+# port = 54321
+# # Schemas to expose in your API. Tables, views and stored procedures in this schema will get API
+# # endpoints. public and storage are always included.
+# schemas = ["public", "storage"]
+# # Extra schemas to add to the search_path of every request.
+# extra_search_path = ["extensions"]
+# # The maximum number of rows returns from a view, table, or stored procedure. Limits payload size
+# # for accidental or malicious requests.
+# max_rows = 1000
+
 [api]
-# Port to use for the API URL.
+enabled = true
 port = 54321
-# Schemas to expose in your API. Tables, views and stored procedures in this schema will get API
-# endpoints. public and storage are always included.
-schemas = []
-# Extra schemas to add to the search_path of every request.
+schemas = ["public", "storage"]
 extra_search_path = ["extensions"]
-# The maximum number of rows returns from a view, table, or stored procedure. Limits payload size
-# for accidental or malicious requests.
 max_rows = 1000
 
 [db]
