--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lodash.uniqby": "^4.7.0",
-    "lucide-react": "^0.367.0",
+    "lucide-react": "^0.341.0",
+    "markdown-to-jsx": "^7.4.7",
     "moment": "^2.29.4",
     "next": "14.3.0-canary.18",
     "next-mdx-remote": "^4.4.1",
