--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mantine/hooks": "^7.8.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/bundle-analyzer": "^14.0.0",
@@ -60,8 +62,13 @@
     "@tiptap/extension-image": "^2.0.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-placeholder": "2.2.4",
+    "@tiptap/extension-table": "^2.3.0",
+    "@tiptap/extension-table-cell": "^2.3.0",
+    "@tiptap/extension-table-header": "^2.3.0",
+    "@tiptap/extension-table-row": "^2.3.0",
     "@tiptap/extension-task-item": "^2.0.3",
     "@tiptap/extension-task-list": "^2.0.3",
+    "@tiptap/extension-text-align": "^2.3.0",
     "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
@@ -97,6 +104,7 @@
     "lodash": "^4.17.21",
     "lodash.uniqby": "^4.7.0",
     "lucide-react": "^0.341.0",
+    "markdown-to-jsx": "^7.4.7",
     "moment": "^2.29.4",
     "next": "^14.1.0",
     "next-mdx-remote": "^4.4.1",
