--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.4",
     "@tiptap/core": "^2.0.3",
+    "@tiptap/extension-bullet-list": "^2.3.0",
     "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-highlight": "^2.0.3",
     "@tiptap/extension-horizontal-rule": "^2.0.3",
