--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.4",
+    "@tanstack/react-table": "^8.16.0",
     "@tiptap/core": "^2.0.3",
     "@tiptap/extension-bullet-list": "^2.3.0",
     "@tiptap/extension-color": "^2.0.3",
@@ -100,8 +101,10 @@
     "geist": "^1.1.0",
     "hast-util-select": "^6.0.0",
     "hastscript": "^9.0.0",
+    "html2canvas": "^1.4.1",
     "inbucket-js-client": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lodash.uniqby": "^4.7.0",
     "lucide-react": "^0.341.0",
