--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,18 +18,18 @@ jobs:
       - name: test
         run: pnpm run test
 
-  playwright:
-    timeout-minutes: 20
+  # playwright:
+  #   timeout-minutes: 20
 
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/ci-setup
-      - uses: supabase/setup-cli@v1
-        with:
-          version: latest
-      - run: supabase start
-      - name: Install playwright browsers
-        run: pnpm exec playwright install --with-deps
-      - name: Run e2e tests
-        run: pnpm run test:e2e
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: ./.github/actions/ci-setup
+  #     - uses: supabase/setup-cli@v1
+  #       with:
+  #         version: latest
+  #     - run: supabase start
+  #     - name: Install playwright browsers
+  #       run: pnpm exec playwright install --with-deps
+  #     - name: Run e2e tests
+  #       run: pnpm run test:e2e
