--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@stripe/stripe-js": "^3.0.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/sentry-js-integration": "^0.1.0",
     "@supabase/supabase-js": "^2.38.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.9",
