--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@react-email/components": "^0.0.16",
-    "@react-email/render": "^0.0.12",
+    "@react-email/components": "^0.0.17",
+    "@react-email/render": "^0.0.13",
     "@remixicon/react": "^4.1.1",
     "@sentry/nextjs": "^7.59.3",
     "@stripe/stripe-js": "^3.0.0",
@@ -129,7 +129,6 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-email": "2.1.1",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^2.0.4",
@@ -179,6 +178,7 @@
     "@microflash/rehype-slugify": "^1.0.0",
     "@next/eslint-plugin-next": "^14.0.0",
     "@playwright/test": "^1.42.1",
+    "@react-email/tailwind": "^0.0.16",
     "@testing-library/react": "^14.0.0",
     "@types/events": "^3.0.1",
     "@types/formidable": "^3.4.0",
@@ -211,6 +211,7 @@
     "pg": "^8.11.3",
     "postcss": "^8.4.20",
     "prettier": "^3.0.0",
+    "react-email": "^2.1.2",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-parse": "^9.0.0",
     "rehype-slug": "^6.0.0",
