--- a/package.json
+++ b/package.json
@@ -44,8 +44,18 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@react-email/components": "^0.0.17",
+    "@react-email/body": "^0.0.8",
+    "@react-email/button": "^0.0.15",
+    "@react-email/column": "^0.0.10",
+    "@react-email/container": "^0.0.12",
+    "@react-email/head": "^0.0.8",
+    "@react-email/heading": "^0.0.12",
+    "@react-email/hr": "^0.0.8",
+    "@react-email/html": "^0.0.8",
+    "@react-email/link": "^0.0.8",
     "@react-email/render": "^0.0.13",
+    "@react-email/section": "^0.0.12",
+    "@react-email/text": "^0.0.8",
     "@remixicon/react": "^4.1.1",
     "@sentry/nextjs": "^7.59.3",
     "@stripe/stripe-js": "^3.0.0",
@@ -178,7 +188,6 @@
     "@microflash/rehype-slugify": "^1.0.0",
     "@next/eslint-plugin-next": "^14.0.0",
     "@playwright/test": "^1.42.1",
-    "@react-email/tailwind": "^0.0.16",
     "@testing-library/react": "^14.0.0",
     "@types/events": "^3.0.1",
     "@types/formidable": "^3.4.0",
