--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "packageManager": "pnpm@9.0.6",
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "^1.7.18",
