--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "lucide-react": "^0.341.0",
     "markdown-to-jsx": "^7.4.7",
     "moment": "^2.29.4",
-    "next": "14.3.0-canary.63",
+    "next": "14.2.3",
     "next-mdx-remote": "^4.4.1",
     "next-nprogress-bar": "^2.1.2",
     "next-themes": "^0.3.0",
@@ -133,12 +133,12 @@
     "posthog-js": "^1.75.3",
     "posthog-node": "^4.0.0",
     "qs": "^6.11.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.50.1",
@@ -199,9 +199,9 @@
     "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.2.77",
+    "@types/react": "18.3.2",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.2.14",
+    "@types/react-dom": "^18.3.0",
     "@types/unist": "^3.0.0",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -222,7 +222,6 @@
     "pg": "^8.11.3",
     "postcss": "^8.4.20",
     "prettier": "^3.0.0",
-    "react-email": "^2.1.2",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-parse": "^9.0.0",
     "rehype-slug": "^6.0.0",
