--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "packageManager": "pnpm@9.0.6",
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.13",
     "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
@@ -94,7 +95,7 @@
     "@unkey/api": "^0.19.0",
     "@unkey/nextjs": "^0.15.0",
     "@vercel/analytics": "^1.0.1",
-    "ai": "^3.0.0",
+    "ai": "^3.1.12",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "checkbox": "^0.0.1",
@@ -102,6 +103,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "crypto-js": "^4.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "emittery": "^1.0.1",
@@ -122,12 +124,14 @@
     "lucide-react": "^0.341.0",
     "markdown-to-jsx": "^7.4.7",
     "moment": "^2.29.4",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-mdx-remote": "^4.4.1",
     "next-nprogress-bar": "^2.1.2",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.8",
     "nprogress": "^0.2.0",
+    "openai-edge": "^1.2.2",
     "p-memoize": "^7.1.1",
     "path-to-regexp": "^6.2.1",
     "posthog-js": "^1.75.3",
@@ -142,11 +146,15 @@
     "react-dropzone": "^14.2.3",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.50.1",
+    "react-intersection-observer": "^9.10.2",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.4",
     "react-select": "^5.7.3",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-pretty-code": "^0.12.4",
     "rehype-toc": "^3.0.2",
     "remark-frontmatter": "^5.0.0",
+    "remark-math": "^6.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
     "resend": "^3.0.0",
     "rooks": "^7.14.0",
@@ -168,7 +176,7 @@
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "web-vitals": "^3.4.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.4"
   },
   "scripts": {
     "dev": "next dev",
